# knowledge-project

./: .ghcid  .gitignore  cabal.project
clozes/agile-design/: S2.clozes
extracts/agile-design/: S2.clozes  S2.extracts
extracts/design-patterns/: design-patterns.extracts
knowledge-tools/: knowledge-tools.cabal
knowledge-tools/cloze/: Main.hs
knowledge-tools/src/Data/: Clozes.hs  Extracts.hs
knowledge-tools/src/Data/Clozes/: IO.hs
knowledge-tools/src/Data/Extracts/: IO.hs  Optic.hs  Parse.hs
knowledge/agile-design/: S2.clozes  S2.extracts  S2Ch08.clozes  S2Ch08.extracts  S2Ch9.extracts
knowledge/design-patterns/: design-patterns.extracts
