cabal-version:          2.4
name:                   knowledge-tools
version:                0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:                MIT
license-file:           LICENSE
author:                 Gabriel Anderson
maintainer:             gabe4k@gmail.com
-- copyright:
-- category:
build-type:             Simple


library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -j4
  -- ghc-options:          -Werror -Wall -j4

  exposed-modules:      Data.Clozes
                        Data.Clozes.IO
                        Data.Extracts
                        Data.Extracts.IO
                        Data.Extracts.Optic
                        Data.Extracts.Parse
  
  build-depends:        base >=4.9 && <5,
                        containers >=0.6 && <0.7,
                        dlist >=0.8 && <0.9,
                        filepath >=1.4 && <1.5,
                        keys >=3 && <4,
                        megaparsec >=8.0 && <9,
                        mono-traversable-keys >=0.1 && <2,
                        parser-combinators >=1.0 && <2.0, 
                        profunctor-optics >=0.0.1 && <1,
                        prettyprinter >=1.4 && <2,
                        text >=1.2 && <1.3,
                        vector >=0.11 && <0.13


executable cloze
  default-language:     Haskell2010
  hs-source-dirs:       cloze/
  main-is:              Main.hs
  ghc-options:          -Wall -j4
  
  build-depends:        base >=4.9 && <5,
                        directory >=1.3 && <1.4,
                        dir-traverse >=0.2 && <0.3,
                        filepath >=1.4 && <1.5,
                        knowledge-tools,
                        safe >=0.3 && <0.4
